option optimize_for = LITE_RUNTIME;
import "U64Type.proto";
message ChatMsgNotify
{
 required uint32 channel = 1;
 optional U64Type sender_legion_id = 10;
 optional string sender_legion_name = 11;
 required string sender_name = 2;
 required uint32 mainrole_card_id = 3;
 required uint32 vip_level = 4;
 required string content = 5;
 optional uint32 fashion_id = 6;
 optional U64Type sender_id = 7;
 optional uint32 sender_lv = 8;
 optional uint32 sender_fc = 9;
}
